src/pages/Beach/[[...slug]]/styles.module.css
.container {
  background-color: white;
  display: flex;
}

.innerContainer {
  border-right: 1px solid #eee;
}

.carouseltitle{
  margin-left: 16px;
  margin-top: 32px;
  font-weight: var(--text-weight-bold);
}

.ad {
  margin-left: 16px;
}

@media (max-width: 968px) {
  .adTop {
    display: none;
  }

  .container {
    display: block;
  }

  .innerContainer {
    border-right: none;
  }

  .carouselSpacer {
    margin: 32px 0;
  }
}

